# trade-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
conf/: config.yaml
src/: Exchange.py  PlotDrawer.py  TradeBot.py  TraderBot.py  main.py
