[tool.poetry]
name = "trade-bot"
version = "0.1.0"
description = "This project is a simple trade bot with a simple strategy for Deribit.com exchange stock."
authors = ["kndrvt"]

[tool.poetry.dependencies]
python = "3.8.5"
docker = "^4.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"