[tool.poetry]
name = "trade-bot"
version = "0.1.0"
description = "This project is a simple trade bot with a simple strategy for Deribit.com exchange stock."
authors = ["kndrvt"]

[tool.poetry.dependencies]
python = "3.8.7"
PyYAML = "^5.4.1"
websockets = "^8.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"